--- a/index.html
+++ b/index.html
@@ -9,30 +9,39 @@
 
 <body>
 	<header>
+			<div class="logo"> WALKIRIA PARRALES</div>
+			<div class="logo-page "><img style="width:90px; height:67px;" src="img/logo-grande.png" alt=""> </div>
 					<ul class="nav">
-								<li class="logo"> WALKIRIA PARRALES</li>
-								<li class="logo-page "><img style="width:90px; height:67px;" src="img/logo-grande.png" alt="">
-								</li>
 								<li>INFO</li>
 								<li>
 									<img style="width:21px; height:20px;"src="img/linkedin-logo.png" alt=""></li>
 						</ul>
 	</header>
+
 	<div class="text-presentation">
 			<p>
 				¡Bienvenidos! Soy Wal, diseñadora UX / UI. <br> 
 				Simplicidad, funcionalidad y estética son la base <br>
 				de mis proyectos.
 			</p>
-		</div>
+	</div>
 
-	<main	id="card-article-container">
-		<article class="card-article">
-			<img style="width:670px; height:385px;"src="img/phytool.png">
-		</article>
-		<article class="card-article">esto es un articulo</article>
+	<card>
 		
-	</main>
+		<div	id="card-article-container">
+
+			<article class="card-article">
+					<img src="img/phytool.png" class="blur"/>
+				<span class="article-text"> Phytool es una aplicación para hacer ejercicios de rehabilitación en casa, como complemento a las sesiones presenciales de la terapia.
+					Branding | Diseño de App</span>
+
+			</article>
+			<article class="card-article"></article>
+		</div>
+	</card>
+
+
+
 
 	<footer id="footer">
 			© Walkiria Parrales, 2019
