--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 <body>
 	<header>
 			<div class="logo"> WALKIRIA PARRALES</div>
-			<div class="logo-page "><img style="width:90px; height:67px;" src="img/logo-grande.png" alt=""> </div>
-					<ul class="nav">
-								<li>INFO</li>
-								<li>
-									<img style="width:21px; height:20px;"src="img/linkedin-logo.png" alt=""></li>
-						</ul>
+			<div class="logo-page "><img style="width:85px; height:62px;" src="img/logo-grande.png" alt=""> </div>
+			<ul class="nav">
+					<li style="width: 80px">INFO</li>
+					<li id="logo-linkedin">
+						<img style="width:21px; height:20px;"src="img/linkedin-logo.png" alt=""></li>
+			</ul>
 	</header>
 
 	<div class="text-presentation">
@@ -30,13 +30,31 @@
 		
 		<div	id="card-article-container">
 
+			<a href="file:///Users/walkiriaparrales/Desktop/portfolio/phytool.html">
 			<article class="card-article">
+				<div class="color-hover">
 					<img src="img/phytool.png" class="blur"/>
-				<span class="article-text"> Phytool es una aplicación para hacer ejercicios de rehabilitación en casa, como complemento a las sesiones presenciales de la terapia.
-					Branding | Diseño de App</span>
+				</div>	
 
+				<div class="article-text"> 
+					<p>Phytool es una aplicación para
+					 hacer ejercicios de rehabilitación en casa, como complemento 
+					 a las sesiones presenciales de la terapia.</p>
+
+					<p class="salto-texto"
+					>Branding | Diseño de App</p>
+					</div>
 			</article>
-			<article class="card-article"></article>
+			</a>
+
+
+				
+			
+			
+
+			<article class="card-article">
+			<img src="img/phytool.png" class="blur"/>
+		</article>
 		</div>
 	</card>
 
