--- a/phytool.html
+++ b/phytool.html
@@ -2,21 +2,21 @@
 <html>
     <head> 
 				<title> Walkiria Parrales</title>
-				<link rel="icon" type="image/png" href="img/fav-icon.png" sizes="none">
+            <link rel="icon" type="image/png" href="img/fav-icon.png" sizes="none">
         <link rel="stylesheet" href="css/phytool-styles.css"
-		</head>
+    </head>
 		
 
 <body>
 	<header>
-        
-			<div class="logo"> WALKIRIA PARRALES</div>
-			<div class="logo-page "><img style="width:50px; height:37px;" src="img/logo-grande.png" alt=""> </div>
-					<ul class="nav">
-								<li style="width: 80px">INFO</li>
-								<li id="logo-linkedin">
-									<img style="width:21px; height:20px;"src="img/linkedin-logo.png" alt=""></li>
-						</ul>
+        <div class="logo"> WALKIRIA PARRALES</div>
+        <div class="logo-page "><img style="width:50px; height:37px;" src="img/logo-grande.png" alt=""> </div>
+            <ul class="nav">
+                <li style="width: 80px">INFO</li>
+                <li id="logo-linkedin">
+                    <img style="width:21px; height:20px;"src="img/linkedin-logo.png" alt="">
+                </li>
+            </ul>
     </header>
 
     <div class="text-presentation">
@@ -26,9 +26,35 @@ que ayuda a los pacientes a seguir con sus ejercicios en casa.
         </p>
     </div>
     
-    <div class="imagenes-proyecto">
-        <img style="width: 80%; height: 100%;" src="img/perspectiva-app.jpg">
+    <div class="img-project">
+        <img style="width: 90%" src="img/perspectiva-app.jpg" alt="">
     </div>
+
+    <div class="explicacion">
+        <h2> El proyecto</h2>
+        <p class="texto-base">
+            Phytool es el resultado de un trabajo de investigación, en el que se determinó que en un proceso de rehabilitación es necesario llevar la práctica de los ejercicios físicos más allá del centro fisioterapéutico al que se asiste y por lo tanto, que para obtener mejores resultados es necesario trabajar las rutinas tambien en casa. Sin embargo más del 75% de los pacientes no lo hace por varios motivos.
+        </p>
+        <div class="filete"></div>
+        <div class="doble-columna">
+            <div class="columna1">
+                <h2> UX Research</h2>
+                <ul>
+                    <li>1 |</li>
+                    <li>2 |</li>
+                </ul>
+            </div>
+            <div class="columna1">
+                <h2> UX Research</h2>
+                <ul>
+                    <li>3 |</li>
+                    <li>4 |</li>
+                </ul>
+            </div>
+
+        </div>
+    </div>
+
 
 </body>
 
