--- a/phytool.html
+++ b/phytool.html
@@ -40,15 +40,16 @@ que ayuda a los pacientes a seguir con sus ejercicios en casa.
             <div class="columna1">
                 <h2> UX Research</h2>
                 <ul>
-                    <li>1 |</li>
-                    <li>2 |</li>
+                    <li>1 | Mind Map / Empathy Map</li>
+                    <li>2 | User Journey Map</li>
+                    <li>3 | User Persona / Problem Statemente</li>
                 </ul>
             </div>
             <div class="columna1">
-                <h2> UX Research</h2>
+                <h2> UI Design</h2>
                 <ul>
-                    <li>3 |</li>
-                    <li>4 |</li>
+                    <li>4 | Moodboard / Style Guide</li>
+                    <li>5 | Prototipo High Fidelity</li>
                 </ul>
             </div>
 
