--- a/phytool.html
+++ b/phytool.html
@@ -9,14 +9,22 @@
 
 <body>
 	<header>
-        <div class="logo"> WALKIRIA PARRALES</div>
-        <div class="logo-page "><img style="width:50px; height:37px;" src="img/logo-grande.png" alt=""> </div>
-            <ul class="nav">
-                <li style="width: 80px">INFO</li>
-                <li id="logo-linkedin">
-                    <img style="width:21px; height:20px;"src="img/linkedin-logo.png" alt="">
-                </li>
-            </ul>
+
+            <div class="logo">
+                <a href="./index.html">WALKIRIA PARRALES</a>
+            </div>
+        
+        <div class="logo-page ">
+        <a href="./index.html">
+                <img style="width:50px; height:37px;" src="img/logo-grande.png" alt="">
+            </a>
+        </div>
+        <ul class="nav">
+            <li style="width: 80px">INFO</li>
+            <li id="logo-linkedin">
+                <img style="width:21px; height:20px;"src="img/linkedin-logo.png" alt="">
+            </li>
+        </ul>
     </header>
 
     <div class="text-presentation">
