--- a/index.html
+++ b/index.html
@@ -12,9 +12,15 @@
 			<div class="logo"> WALKIRIA PARRALES</div>
 			<div class="logo-page "><img style="width:85px; height:62px;" src="img/logo-grande.png" alt=""> </div>
 			<ul class="nav">
+					<a href="./info.html">
 					<li style="width: 80px">INFO</li>
-					<li id="logo-linkedin">
-						<img style="width:21px; height:20px;"src="img/linkedin-logo.png" alt=""></li>
+				</a>
+				
+					<a href="https://www.linkedin.com/in/walkiriapm/">
+						<li id="logo-linkedin">
+								<img style="width:21px; height:20px;"src="img/linkedin-logo.png" alt="">
+						</li>
+				</a> 
 			</ul>
 	</header>
 
