--- a/phytool.html
+++ b/phytool.html
@@ -3,7 +3,7 @@
     <head> 
 				<title> Walkiria Parrales</title>
             <link rel="icon" type="image/png" href="img/fav-icon.png" sizes="none">
-        <link rel="stylesheet" href="css/phytool-styles.css"
+        <link rel="stylesheet" href="css/phytool-styles.css"/>
     </head>
 		
 
@@ -20,10 +20,14 @@
             </a>
         </div>
         <ul class="nav">
-            <li style="width: 80px">INFO</li>
-            <li id="logo-linkedin">
-                <img style="width:21px; height:20px;"src="img/linkedin-logo.png" alt="">
-            </li>
+                <a href="./info.html">
+					<li style="width: 80px">INFO</li>
+				</a>
+            <a href="https://www.linkedin.com/in/walkiriapm/">
+                <li id="logo-linkedin">
+                    <img style="width:21px; height:20px;"src="img/linkedin-logo.png" alt="">
+                </li>
+            </a> 
         </ul>
     </header>
 
@@ -112,7 +116,12 @@ que ayuda a los pacientes a seguir con sus ejercicios en casa.
                 <div class="bola"></div>
                 <div class="bola"></div>
            </div>
-    </div>       
+    </div>   
+
+    <footer id="footer">
+			© Walkiria Parrales, 2019
+    </footer>
+    
 
 </body>
 
