--- a/info.html
+++ b/info.html
@@ -44,10 +44,9 @@
                 Considero que soy una persona observadora, de las que lo miran y lo tocan todo, y resolutiva,
                 no me gusta lo complicado, así que lo que depende de mi
                 lo hago fácil y sencillo. </br>
-                Si puedo ayudarte con algo no dudes en contactarme.
+                Si puedo ayudarte con algo no dudes en contactarme:
         </p>
-
-        <p class="texto-base">
+        <p>
             walkiriapm@gmail.com </br>
             +64 637 645 901
         </p>
