--- a/phytool.html
+++ b/phytool.html
@@ -6,8 +6,8 @@
         <link rel="stylesheet" href="css/phytool-styles.css"/>
     </head>
 		
-
 <body>
+
 	<header>
 
             <div class="logo">
@@ -54,8 +54,13 @@ que ayuda a los pacientes a seguir con sus ejercicios en casa.
             <div class="columna1">
                 <h2> UX Research</h2>
                 <ul>
+                    <a href="#mind-map">
                     <li>1 | Mind Map / Empathy Map</li>
+                    </a>
+                
+                    <a href="#user-journey">
                     <li>2 | User Journey Map</li>
+                    </a>
                     <li>3 | User Persona / Problem Statemente</li>
                 </ul>
             </div>
@@ -81,7 +86,7 @@ que ayuda a los pacientes a seguir con sus ejercicios en casa.
         </div>
 
     <div class="explicacion">
-         <h2> Mind Map / Empathy Map</h2>
+         <h2 id="mind-map"> Mind Map / Empathy Map</h2>
          <p class="texto-base">
                 Con estos dos métodos conseguimos ordenar las ideas
                 principales y focalizamos en los inconvenientes que impiden al usuario ser
@@ -102,7 +107,7 @@ que ayuda a los pacientes a seguir con sus ejercicios en casa.
         </div>
 
     <div class="explicacion">
-         <h2> User Journey</h2>
+         <h2 id="user-journey"> User Journey</h2>
          <p class="texto-base">
                 Con estos dos métodos conseguimos ordenar las ideas
                 principales y focalizamos en los inconvenientes que impiden al usuario ser
