--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 <body>
 	<header>
 			<div class="logo"> WALKIRIA PARRALES</div>
-			<div class="logo-page "><img style="width:85px; height:62px;" src="img/logo-grande.png" alt=""> </div>
+			<div class="logo-page "><img style="width:80px; height:57px;" src="img/logo-grande.png" alt=""> </div>
 			<ul class="nav">
 					<a href="./info.html">
 					<li style="width: 80px">INFO</li>
 				</a>
-				
+
 					<a href="https://www.linkedin.com/in/walkiriapm/">
 						<li id="logo-linkedin">
 								<img style="width:21px; height:20px;"src="img/linkedin-logo.png" alt="">
@@ -34,34 +34,63 @@
 
 	<card>
 		
-		<div	id="card-article-container">
 
-			<a href="file:///Users/walkiriaparrales/Desktop/portfolio/phytool.html">
-			<article class="card-article">
-				<div class="color-hover">
-					<img src="img/phytool.png" class="blur"/>
-				</div>	
-
-				<div class="article-text"> 
-					<p>Phytool es una aplicación para
-					 hacer ejercicios de rehabilitación en casa, como complemento 
-					 a las sesiones presenciales de la terapia.</p>
-
-					<p class="salto-texto"
-					>Branding | Diseño de App</p>
+		<div class="cards-container">
+				<a href="#footer">
+					<div class="card-article-container">
+						<article class="card-article">
+							<div class="card-article-fake-background"></div>
+							<img src="img/phytool.png" class="blur"/>
+							<p class="article-text">Phytool es una aplicación para
+								hacer ejercicios de rehabilitación en casa, como complemento 
+								a las sesiones presenciales de la terapia. <br><br> 
+								Branding | Diseño de App
+							</p>
+						</article>	
 					</div>
-			</article>
-			</a>
-
-
-				
-			
-			
-
-			<article class="card-article">
-			<img src="img/phytool.png" class="blur"/>
-		</article>
+				</a>
+				<a href="file:///Users/walkiriaparrales/Desktop/portfolio/phytool.html">
+					<div class="card-article-container">
+						<article class="card-article">
+							<div class="card-article-fake-background"></div>
+							<img src="img/phytool.png" class="blur"/>
+							<p class="article-text">Phytool es una aplicación para
+								hacer ejercicios de rehabilitación en casa, como complemento 
+								a las sesiones presenciales de la terapia. <br><br> 
+								Branding | Diseño de App
+							</p>
+						</article>	
+					</div>
+				</a>
+				<a href="file:///Users/walkiriaparrales/Desktop/portfolio/phytool.html">
+					<div class="card-article-container">
+						<article class="card-article">
+							<div class="card-article-fake-background"></div>
+							<img src="img/phytool.png" class="blur"/>
+							<p class="article-text">Phytool es una aplicación para
+								hacer ejercicios de rehabilitación en casa, como complemento 
+								a las sesiones presenciales de la terapia. <br><br> 
+								Branding | Diseño de App
+							</p>
+						</article>	
+					</div>
+				</a>
+				<a href="file:///Users/walkiriaparrales/Desktop/portfolio/phytool.html">
+					<div class="card-article-container">
+						<article class="card-article">
+							<div class="card-article-fake-background"></div>
+							<img src="img/phytool.png" class="blur"/>
+							<p class="article-text">Phytool es una aplicación para
+								hacer ejercicios de rehabilitación en casa, como complemento 
+								a las sesiones presenciales de la terapia. <br><br> 
+								Branding | Diseño de App
+							</p>
+						</article>	
+					</div>
+				</a>
 		</div>
+
+
 	</card>
 
 
