--- a/info.html
+++ b/info.html
@@ -41,7 +41,7 @@
         <p class="texto-base">
                 Me gradué como diseñadora gráfica en Eina, Universidad de Diseño de Barcelona </br> y actualmente estoy
                 acabando el  Bootcamp de UX / UI en Ironhack. </br>
-                Considero que soy una persona observadora, de las que lo miran y lo tocan todo, y resolutiva,
+        </br>Considero que soy una persona observadora, de las que lo miran y lo tocan todo, y resolutiva,
                 no me gusta lo complicado, así que lo que depende de mi
                 lo hago fácil y sencillo. </br>
                 Si puedo ayudarte con algo no dudes en contactarme:
