portfolio-semi-acabado

--- a/phytool.html
+++ b/phytool.html
@@ -8,8 +8,7 @@
 		
 <body>
 
-	<header>
-
+	<header id="header">
             <div class="logo">
                 <a href="./index.html">WALKIRIA PARRALES</a>
             </div>
@@ -30,6 +29,10 @@
             </a> 
         </ul>
     </header>
+
+    <a id="scroll-arrow" href="#header"> 
+        <img id="scroll-arrow-svg" src="img/flecha.png" alt=""/>
+    </a>
 
     <div class="text-presentation">
         <h1> Phytool</h1>
@@ -86,7 +89,7 @@ que ayuda a los pacientes a seguir con sus ejercicios en casa.
         </div>
 
     <div class="explicacion">
-         <h2 id="mind-map"> Mind Map / Empathy Map</h2>
+         <h2> Mind Map / Empathy Map</h2>
          <p class="texto-base">
                 Con estos dos métodos conseguimos ordenar las ideas
                 principales y focalizamos en los inconvenientes que impiden al usuario ser
@@ -103,7 +106,7 @@ que ayuda a los pacientes a seguir con sus ejercicios en casa.
     </div>
 
     <div class="img-project">
-            <img style="width: 90%" src="img/journey-map1-2.jpg"" alt="">
+            <img id="mind-map" style="width: 90%" src="img/journey-map1-2.jpg"" alt="">
         </div>
 
     <div class="explicacion">
