--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 		
 
 		<div class="cards-container">
-				<a href="#footer">
+				<a href="./phytool.html">
 					<div class="card-article-container">
 						<article class="card-article">
 							<div class="card-article-fake-background"></div>
@@ -64,14 +64,11 @@
 				</a>
 				
 		</div>
-
-
 	</card>
 
 
 
-
-	<footer id="footer">
+	<footer>
 			© Walkiria Parrales, 2019
 	</footer>
 </body>
