--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
     <head> 
 				<title> Walkiria Parrales</title>
 				<link rel="icon" type="image/png" href="img/fav-icon.png" sizes="none">
-        <link rel="stylesheet" href="css/styles.css" />
+				<link rel="stylesheet" href="css/styles.css" />
+				
 		</head>
 		
 
@@ -69,7 +70,7 @@
 
 
 	<footer>
-			© Walkiria Parrales, 2019
+		<span class="footer-text"> © Walkiria Parrales, 2019 </span>	
 	</footer>
 </body>
 
