--- a/phytool.html
+++ b/phytool.html
@@ -115,12 +115,19 @@
     </div>
 
 
-    <button onclick="hidden()"> </button>
+
 
 
     <div class="img-project">
-            <img id="user-journey" style="width: 80%" src="img/journey-map1.jpg" alt="">
+            <img id="button-left" class="hidden" src="img/flecha-izq.png" onclick="hideTopPage()"/>
+            <img id="button-right"  src="img/flecha-der.png" onclick="hideTopPage()"/>
+
+            <img id="user-journey" class="hidden" style="width: 80%" src="img/journey-map1.jpg" alt="">
+            <img id="user-journey2"  style="width: 80%" src="img/journey-map2.jpg" alt="">
         </div>
+
+        
+      
 
     <div class="explicacion">
          <h2 id="user-journey"> User Journey</h2>
