--- a/info.html
+++ b/info.html
@@ -41,7 +41,7 @@
         <p class="texto-base">
                 Me gradué como diseñadora gráfica en Eina, Universidad de Diseño de Barcelona </br> y actualmente estoy
                 acabando el  Bootcamp de UX / UI en Ironhack. </br>
-        </br>Considero que soy una persona observadora, de las que lo miran y lo tocan todo, resolutiva,
+        </br>Considero que soy una persona observadora, de las que lo miran y lo tocan todo,</br> resolutiva,
                 no me gusta lo complicado así que lo que depende de mi
                 lo hago fácil y sencillo. </br>
                 Si puedo ayudarte con algo no dudes en contactarme:
@@ -52,9 +52,9 @@
         </p>
     </div>
 
-    <footer id="footer">
-			© Walkiria Parrales, 2019
-    </footer>
+    <footer>
+            <span class="footer-text"> © Walkiria Parrales, 2019 </span>	
+        </footer>
 
 </body>
 
