--- a/phytool.html
+++ b/phytool.html
@@ -100,8 +100,8 @@
             <img class="button-left hidden" id="button-left2" src="img/flecha-izq.png" onclick="hideTopPage2()"/>
             <img  class="button-right" id="button-right2"  src="img/flecha-der.png" onclick="hideTopPage2()"/>
 
-            <img class="image-1 hidden" id="mind-map-img" style="width: 80%" src="img/mind-map.png" alt="">
-            <img class="image-2" id="empathy-map"  style="width: 80%" src="img/empathy-map.png" alt="">
+            <img class="image-1 hidden" id="empathy-map" style="width: 80%" src="img/empathy-map.png" alt="">
+            <img class="image-2" id="mind-map-img"  style="width: 80%" src="img/mind-map.png" alt="">
         </div>
 
     <div class="explicacion">
